# health-platform-chatbot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/agents/health_agent/: agent.py
app/agents/search_agent/: agent.py
app/config/: AppSettings.py
app/core/: auth.py
app/decorators/: cache.py  debugger.py  exception_handler.py  retry.py  timer.py
app/prompts/: __init__.py
app/routers/v1/: HealthAgentRouter.py  SearchAgentRouter.py
app/schemas/: CommonSchema.py  DiagnosisSchema.py  EncounterSchema.py  HealthAgentSchema.py  MedicationSchema.py  PatientSchema.py  SearchAgentSchema.py
app/tools/: encounters.py
app/utils/: db_helpers.py  tool_utils.py
data/: chat_history.db
sample/: health.db
scripts/: utils.py
scripts/conversation/: history.py
scripts/examples/: autogen_example.py  persistent_graph.py  simple_graph.py  stream_llm_tokens.py
scripts/helpers/: format_text.py
scripts/retrievers/: __init__.py  diagnosis_retriever.py  encounter_retriever.py  lab_codes_retriever.py  lab_result_retriever.py  medication_retriever.py  patient_retriever.py  vital_sign_retriever.py
scripts/schemas/: args_schema.py  common_schema.py
scripts/tools/: __init__.py  encounter_tools.py  lab_result_tools.py  medication_tools.py  patient_tools.py  vital_sign_tools.py
src/: agent.py  config.py  data_ingestion.py  experiments.ipynb  prompts.py  tools.py
