[tool.poetry]
name = "fastapi llama-index==0-11-4 plotly==5-24-0 streamlit==1-38-0 docx2txt==0-8"
version = "0.1.0"
description = "environment for mental health chatbot"
authors = ["MarkusKhoa <dangkhoa20006@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi llama_index==0"}]

[tool.poetry.dependencies]
python = "^3.11"
pathlib = "^1.0.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.115.0"
llama-index = "0.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
