[tool.poetry]
name = "ehr-chatbot"
version = "0.1.0"
description = ""
authors = ["Quyen Pham Khac <phamkhacquyen1996@gmail.com>"]
readme = "README.md"
packages = [{include = "ehr_chatbot"}]

[tool.poetry.dependencies]
python =  ">=3.11,<3.13"
langchain = "^0.2.14"
langgraph = "^0.2.10"
langchain-community = "^0.2.12"
uvicorn = "^0.30.6"
fastapi = {extras = ["all"], version = "^0.112.1"}
crewai = {extras = ["tools"], version = "^0.51.1"}
langgraph-checkpoint-sqlite = "^1.0.0"
langgraph-checkpoint-postgres = "^1.0.3"
pyautogen = "^0.2.35"
gradio = "^4.42.0"
langchain-groq = "^0.1.0"
keyboard = "^0.13.5"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
